#110 controllers - see bootjava project (status, entity...)